--- a/contact/contact.html
+++ b/contact/contact.html
@@ -69,7 +69,7 @@
             <!--TODO-->
             <div class="contact-top">
                 <div class="contact-piece">
-                    <img src="../img/image_name" alt="name">
+                    <img src="../img/Azeem.jpg" alt="azeem">
                     <table>
                         <tr>
                             <td>Name</td>
