--- a/index.html
+++ b/index.html
@@ -246,6 +246,14 @@
                 </div>
             </div>
         </div>
+        
+        <!-- Description-->
+        <div id="description">
+            <h1>What is Rate My Class?</h1>
+            <p>Rate my class is a rating platform specialized to the classes you will take. Professors teaching styles vary depending on the class and Rate my class makes it easy
+                to compare professors to the class you want to. You will get reviews that for the class and professor so you can get a more accurate rating of that class.
+            </p>
+        </div>
 
         <!-- News -->
         <div id="news-section">
